@@ -1,0 +1,40 @@
+//;# autogenerated:  Do not edit.
+
+//; $tls::func = -620;
+//; $tls::saved_errno = -616;
+//; $tls::sa_flags = -612;
+//; $tls::oldmask = -608;
+//; $tls::newmask = -604;
+//; $tls::event = -600;
+//; $tls::errno_addr = -596;
+//; $tls::initialized = -592;
+//; $tls::sigmask = -588;
+//; $tls::sigwait_mask = -584;
+//; $tls::sigwait_info = -580;
+//; $tls::infodata = -576;
+//; $tls::tid = -52;
+//; $tls::prev = -48;
+//; $tls::next = -44;
+//; $tls::stack = -40;
+//; $tls::sig = -8;
+//; $tls::stackptr = -4;
+//; __DATA__
+
+#define tls_func (-620)
+#define tls_saved_errno (-616)
+#define tls_sa_flags (-612)
+#define tls_oldmask (-608)
+#define tls_newmask (-604)
+#define tls_event (-600)
+#define tls_errno_addr (-596)
+#define tls_initialized (-592)
+#define tls_sigmask (-588)
+#define tls_sigwait_mask (-584)
+#define tls_sigwait_info (-580)
+#define tls_infodata (-576)
+#define tls_tid (-52)
+#define tls_prev (-48)
+#define tls_next (-44)
+#define tls_stack (-40)
+#define tls_sig (-8)
+#define tls_stackptr (-4)
